--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -5,6 +5,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name=apple-mobile-web-app-status-bar-style content=black>
 
   <title><%= yield_content(:title) %></title>
 
@@ -20,7 +22,7 @@
     <div id="container">
       <%= yield %>
     </div>
-  
+
     <% if development? %>
       <div id="saving-instructions">
         <p>Paste the following at the top of <i><%= params[:dashboard] %>.erb</i></p>
