--- a/dashboards/cycle.erb
+++ b/dashboards/cycle.erb
@@ -1,26 +1,28 @@
 <script type='text/javascript'>
 $(function() {
-  Dashing.widget_base_dimensions = [370, 340]
-  Dashing.numColumns = 5
+
+  Dashing.numColumns = 3
   Dashing.cycleDashboards({timeInSeconds: 15, stagger: true});
 });
 </script>
 
-<% content_for :title do %>Loop Dashboard<% end %>
+<% content_for :title do %>Reedazawa Dashboard<% end %>
+
+<div class="gridster">
+<ul>
+ <li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
+  <div data-id="picture" data-view="BigImage" data-image="http://i.imgur.com/kVdZcgW.jpg" style="background-color:transparent;"data-max="true">  </div>
+  </li>
+  </ul>
+</div>
 
 <div class="gridster">
   <ul>
-    <!-- Page 1 of widgets goes here. -->
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Hello" data-text="This is your shiny new dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
+<li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
+      <div data-id="forecast" data-view="Forecast" data-widget_title="<img src='http://forecast.io/favicon.ico' />Weather Forecast"> ></div>
     </li>
-
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="synergy" data-view="Meter" data-title="Synergy" data-min="0" data-max="100"></div>
-    </li>
-
   </ul>
-</div>
+  </div>
 
 <div class="gridster">
   <ul>
