--- a/dashboards/cycle.erb
+++ b/dashboards/cycle.erb
@@ -24,17 +24,12 @@ $(function() {
   </ul>
   </div>
 
+
+
 <div class="gridster">
   <ul>
-     <li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
-      <div data-id="buzzwords" data-view="List" data-unordered="true" data-title="Buzzwords" data-moreinfo="# of times said around the office"></div>
-    </li>
-
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="convergence" data-view="Graph" data-title="Convergence" style="background-color:#ff9618"></div>
-    </li>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="valuation" data-view="Number" data-title="Current Valuation" data-moreinfo="In billions" data-prefix="$"></div>
+    <li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
+      <div data-id="ctabus" data-view="ctabus" data-title="ctabus"></div>
     </li>
   </ul>
 </div>
