--- a/dashboards/cycle.erb
+++ b/dashboards/cycle.erb
@@ -10,9 +10,9 @@ $(function() {
 
 <div class="gridster">
 <ul>
- <li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
-  <div data-id="picture" data-view="BigImage" data-image="http://i.imgur.com/kVdZcgW.jpg" style="background-color:transparent;"data-max="true">  </div>
-  </li>
+    <li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
+        <div  data-id="reedazawa" data-view="reedazawa" data-title="harper" data-max="true">  </div>
+    </li>
   </ul>
 </div>
 
