--- a/views/dashboard_layout.pug
+++ b/views/dashboard_layout.pug
@@ -26,7 +26,10 @@ html
       block content
         h1.display-1
             i.fa.fa-home(aria-hidden='true')
-            |  Reedazawa
+            |  Default Dashboard
         br
         hr
+
+        div 
+          p let's make some widgets!
       
