added some introspection

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -46,5 +46,20 @@ block content
 
                       td #{log.room}
                       td #{log.action}
+      hr
+      .row
+        .col
+          p harper
+          ul
+            li UUID:
+              span#UUID
+            li BATT:
+              span#BATT
+            li TEMP:
+              span#TEMP
+            li RSSI:
+              span#RSSI
+            li FW version:    
+              span#FW_version              
 
     |  1200 by 825px
