--- a/views/dashboard_layout.pug
+++ b/views/dashboard_layout.pug
@@ -21,7 +21,9 @@ html
 
       position:relative;
       }
+
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
+    script(src='/js/site.js') 
 
   body
     #dash.container-fluid
