added battery gauge

--- a/views/dashboard_layout.pug
+++ b/views/dashboard_layout.pug
@@ -6,21 +6,9 @@ html
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet', 
     integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN', crossorigin='anonymous')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
-    style.
-      body{
-      background-color: #fff;
-      font-family: 'Roboto', serif;
-      color: #000;
-      }
-      #dash{
-      width:1200px;
-      height: 825px;
+    link(href='/css/style.css', rel='stylesheet')
 
-      background-color: #fff;
-      color: #000;
-
-      position:relative;
-      }
+      
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
     script(src='/js/site.js') 
@@ -36,4 +24,5 @@ html
 
         div 
           p let's make some widgets!
-      
+      #battery
+        p battery2
