--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,22 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+body{
+      background-color: #fff;
+      font-family: 'Roboto', serif;
+      color: #000;
 
-a {
-  color: #00B7FF;
+      }
+
+      #dash{
+      width:1200px;
+      height: 825px;
+
+      background-color: #fff;
+      color: #000;
+
+      position:relative;
+      }
+
+#battery{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
