--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body{
       #dash{
       width:1200px;
       height: 825px;
-
+      padding: 5px;
       background-color: #fff;
       color: #000;
 
