--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -38,6 +38,9 @@ block content
 
         .col
           h3 Agenda
-                 
+
+      .row
+        .col.text-center#quotation
+          p #{quotation.quotation} &mdash; #{quotation.author}      
 
     |  1200 by 825px
