--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,3 +20,23 @@ body{
     width: 100%;
     bottom: 0;
 }
+
+#quotation{
+
+    font-size: 200%;
+    font-size: 2.357vw;
+    font-style: normal;
+    font-variant: small-caps;
+    font-weight: 500;
+    letter-spacing: 0.3em;
+    margin: 1% auto;
+    
+
+
+
+}
+
+.figure-caption {
+
+    color: #222222;
+}
