--- a/views/dashboard_layout.pug
+++ b/views/dashboard_layout.pug
@@ -7,11 +7,8 @@ html
     integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN', crossorigin='anonymous')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
     link(href='/css/style.css', rel='stylesheet')
-
-      
-
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
-    script(src='/js/site.js') 
+    script(src='/js/site.js?variable=yes') 
 
   body
     #dash.container-fluid
