--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -19,23 +19,27 @@ block content
       .row
         .col
           h3 Agenda
-        .col
-          h3 Location
-          .row
-            each people in presence
-              .col
-                figure.figure
-                  img.figure-img.img-fluid.rounded(src=people.location.map_url, alt=people.full_name)
-                  figcaption.figure-caption.text-center
-                    - name = people.full_name.split(" ")[0]
-                    if people.location.inTransit == "1"
-                      - speed = Math.round(people.location.speed)
-                      p #{name} is in transit (#{speed} mph)
-                    else
-                      if people.location.name != undefined
-                        p #{name} is at #{people.location.name}
-                      else
-                        p #{name} is at #{people.location.address1}, #{people.location.address2}
+        if !presence.everyone_home  
+          .col
+            h3 Location #{presence.everyone_home}
+            .row
+              each people in presence.people
+                if people.present
+                  .col
+                    figure.figure
+
+                      img.figure-img.img-fluid.rounded(src=people.location.map_url, alt=people.full_name)
+                      figcaption.figure-caption.text-center
+
+                        - name = people.full_name.split(" ")[0]
+                        if people.location.inTransit == "1"
+                          - speed = Math.round(people.location.speed)
+                          p #{name} is in transit (#{speed} mph)
+                        else
+                          if people.location.name != undefined
+                            p #{name} is at #{people.location.name} #{people.present}
+                          else
+                            p #{name} is at #{people.location.address1}, #{people.location.address2}
                     
 
         
