--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -10,9 +10,8 @@ block content
             img(src=weathericon, alt='')
           |  #{temp} °
           br
-      h1.display-1
-        i.fa.fa-home(aria-hidden='true')
-        |  Reedazawa
+      h1.display-1 🏡 Reedazawa
+
       br
 
       hr
@@ -21,25 +20,30 @@ block content
           h3 Agenda
         if !presence.everyone_home  
           .col
-            h3 Location #{presence.everyone_home}
+            h3 Where is everyone ?
             .row
               each people in presence.people
-                if people.present
-                  .col
-                    figure.figure
 
-                      img.figure-img.img-fluid.rounded(src=people.location.map_url, alt=people.full_name)
-                      figcaption.figure-caption.text-center
+                .col
+                  figure.figure
+                    img.figure-img.img-fluid.rounded(src=people.location.map_url, alt=people.full_name)
+                    figcaption.figure-caption.text-center
 
-                        - name = people.full_name.split(" ")[0]
-                        if people.location.inTransit == "1"
-                          - speed = Math.round(people.location.speed)
-                          p #{name} is in transit (#{speed} mph)
+                      - name = people.full_name.split(" ")[0]
+                      if people.location.inTransit == "1"
+                        - speed = Math.round(people.location.speed)
+                        p #{name} is in transit (#{speed} mph)
+                      else
+                        if people.location.name != undefined
+                          p #{name} is at #{people.location.name}
                         else
-                          if people.location.name != undefined
-                            p #{name} is at #{people.location.name} #{people.present}
-                          else
-                            p #{name} is at #{people.location.address1}, #{people.location.address2}
+                          p #{name} is at #{people.location.address1}, #{people.location.address2}
+        else
+          .col
+            h3 Everyone is home
+            .row
+              .col
+                h1.display-1.text-center 💞🐰 🐩 🐒💞
                     
 
         
