let's test something

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -18,7 +18,7 @@ block content
       .row
         .col
           h3 Agenda
-        if !presence.everyone_home  
+        if presence.everyone_home  
           .col
             h3 Where is everyone ?
             .row
