--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -19,17 +19,15 @@ block content
       .row
         .col
           h3 Agenda
-        if !presence.everyone_home  
+        if presence.everyone_home  
           .col
-            h3 Where is everyone ?
+            h3 Where is everyone?
             .row
               each people in presence.people
-
                 .col
                   figure.figure
                     img.figure-img.img-fluid.rounded(src=people.location.map_url, alt=people.full_name)
                     figcaption.figure-caption.text-center
-
                       - name = people.full_name.split(" ")[0]
                       if people.location.inTransit == "1"
                         - speed = Math.round(people.location.speed)
@@ -41,10 +39,10 @@ block content
                           p #{name} is at #{people.location.address1}, #{people.location.address2}
         else
           .col
-            h3 Everyone is home
+            h3 Everyone is home!
             .row
               .col
-                h1.display-1.text-center <i class="fa fa-heart" aria-hidden="true"></i><i class="fa fa-heart-o" aria-hidden="true"></i><i class="fa fa-heart" aria-hidden="true"></i>
+                h1.display-1.text-center <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-heart-o" aria-hidden="true"></i> <i class="fa fa-heart" aria-hidden="true"></i>
                     
 
         
