--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -19,6 +19,7 @@ block content
       .row
         .col
           h3 Agenda
+          
         if presence.everyone_home  
           .col
             h3 Where is everyone?
@@ -28,7 +29,15 @@ block content
                   figure.figure
                     img.figure-img.img-fluid.rounded(src=people.location.map_url, width=200, alt=people.full_name)
                     figcaption.figure-caption.text-center
-                      p harper
+                      - name = people.full_name.split(" ")[0]
+                      if people.location.inTransit == "1"
+                        - speed = Math.round(people.location.speed)
+                        p #{name} is in transit (#{speed} mph)
+                      else
+                        if people.location.name != undefined
+                          p #{name} is at #{people.location.name}
+                        else
+                          p #{name} is at #{people.location.address1}, #{people.location.address2}
         else
           .col
             h3 Everyone is home!
