it wasn't my fault at all

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -18,7 +18,7 @@ block content
       hr
       .row
         .col
-          h3 Agenda
+          h3 Agenda 😀
           
         if presence.everyone_home  
           .col
