--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -43,7 +43,7 @@ block content
             h3 Everyone is home!
             .row
               .col
-                h1.display-1.text-center <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-heart-o" aria-hidden="true"></i> <i class="fa fa-heart" aria-hidden="true"></i>
+                h1.display-1.text-center 💞🐰🐩🐒💞
                     
 
         
