--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -12,15 +12,15 @@ block content
           br
       h1.display-1
         i.fa.fa-home(aria-hidden='true')
-        |  Reedazawa
+        |  🏡 Reedazawa
       br
 
       hr
       .row
         .col
-          h3 Agenda 😀
+          h3 Agenda 🗓
           
-        if presence.everyone_home  
+        if !presence.everyone_home  
           .col
             h3 Where is everyone?
             .row
