--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -12,13 +12,13 @@ block content
           br
       h1.display-1
         i.fa.fa-home(aria-hidden='true')
-        |  🏡 Reedazawa
+        | Reedazawa
       br
 
       hr
       .row
         .col
-          h3 Agenda 🗓
+          h3 Agenda 
           
         if !presence.everyone_home  
           .col
@@ -43,7 +43,7 @@ block content
             h3 Everyone is home!
             .row
               .col
-                h1.display-1.text-center 💞🐰🐩🐒💞
+                h1.display-1.text-center <i class="fa fa-heart" aria-hidden="true"></i> <i class="fa fa-heart-o" aria-hidden="true"></i> <i class="fa fa-heart" aria-hidden="true"></i>
                     
 
         
