--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,9 +10,15 @@ body{
       padding: 5px;
       background-color: #fff;
       color: #000;
-
+      width: 1200px;
+      height: 825px;
+      border: 1px solid black;
 
       }
+
+.col{
+  border: 1px solid black;
+}
 
 #battery{
     position: fixed;
@@ -28,10 +34,6 @@ body{
     font-weight: 500;
     letter-spacing: 0.3em;
     margin: 1% auto;
-    
-
-
-
 }
 
 .figure-caption {
