--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,12 +12,12 @@ body{
       color: #000;
       width: 1200px;
       height: 825px;
-      border: 1px solid black;
+      border: 1px solid red;
 
       }
 
 .col{
-  border: 1px solid black;
+  border: 1px solid red;
 }
 
 #battery{
