greeting and an emoji test

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -26,7 +26,7 @@ block content
       .row
         .col
           if hour <7
-            h1.text-center Good Morning, early riser!
+            h1.text-center 💤 Good Morning, early riser!
           else if hour <= 10
             h1.text-center Good Morning
           else if hour <= 12
@@ -39,7 +39,7 @@ block content
             h1.text-center Good Night
 
           else if hour < 24
-            h1.text-center It's late, Go to Bed! 😴
+            h1.text-center 😴 It's late, Go to Bed! 😴
           hr
 
 
