added battery percentage

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -26,9 +26,9 @@ block content
       .row
         .col
           if hour <7
-            h1.text-center 💤 Good Morning, early riser!
+            h1.text-center 💤 Good Morning, early riser! 🌅
           else if hour <= 10
-            h1.text-center Good Morning 🌅
+            h1.text-center Good Morning 
           else if hour <= 12
             h1.text-center Get Lunch
           else if hour < 17
