--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -35,9 +35,9 @@ block content
             h1.text-center Go get Lunch
           else if hour < 17
             h1.text-center Good Afternoon
-          else if hour < 17
+          else if hour <= 22
             h1.text-center Good Evening
-          else if hour < 22
+          else if hour <= 23
             h1.text-center Good Night
           else if hour < 24
             h1.text-center 😴 It's late, Go to Bed! 😴
