--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,16 @@ body{
     bottom: 0;
 }
 
+#clock{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 100%;
+    margin-left: -120px;
+    padding: 10px;
+}
+
+
 #quotation{
     font-size: 200%;
     font-size: 2.357vw;
