--- a/views/partials/presence.pug
+++ b/views/partials/presence.pug
@@ -1,5 +1,5 @@
 mixin presenceblock(presence)
-  if presence.everyone_home  
+  if !presence.everyone_home  
     
       h3 Where is everyone?
       .row
