moved over to using socket.io

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -17,7 +17,7 @@ block content
   .row
     .col
       +calendarblock(day)
-    .col#presence
+    #presence.col
       +presenceblock(presence)#presence
   +quotationblock(quotation)
   +clock()
