--- a/views/dashboard_layout.pug
+++ b/views/dashboard_layout.pug
@@ -23,4 +23,6 @@ html
           p let's make some widgets!
       #battery
         
+    script(src="/socket.io/socket.io.js")
+    script(src="/js/sockethandler.js")
       
