--- a/views/partials/clock.pug
+++ b/views/partials/clock.pug
@@ -1,4 +1,4 @@
-mixin clock(presence)
+mixin clock()
   #clock
     object(data='/imgs/station-clock.svg', type='image/svg+xml', width='100', height='100')
       param(name='dial', value='din 41091.4')
