--- a/views/partials/greeting.pug
+++ b/views/partials/greeting.pug
@@ -1,9 +1,6 @@
-include greetings
-
-mixin greetingblock(hour)
+mixin greetingblock()
   hr
   .row
     .col
-      h1.text-center#greeting
-        +greeting(hour)
+      h1.text-center#greeting HELLO THERE HUMAN
       hr
