--- a/views/partials/quotation.pug
+++ b/views/partials/quotation.pug
@@ -2,7 +2,7 @@ mixin quotationblock(quotation)
   .row
     .col.text-center
       span#quotation
-        span#quote #{quotation.quotation} 
+        span#quote You are an amazing person
         br
         | &mdash; 
-        span#author #{quotation.author}  
+        span#author Lulu Nakazawa Reed 
