--- a/views/partials/weather.pug
+++ b/views/partials/weather.pug
@@ -1,7 +1,7 @@
 mixin weather(temp, weathericon)
    h1.float-right
     .text-right#weather
-      img(src=weathericon, alt='', height=75)#icon
+      img(src="http://icons.wxug.com/i/c/k/sunny.gif", alt='', height=75)#icon
       | &nbsp;
-      span#temperature #{temp}
+      span#temperature 0.0
       |  °
