--- a/views/dashboard_layout.pug
+++ b/views/dashboard_layout.pug
@@ -9,6 +9,8 @@ html
     link(href='/css/style.css?variable=yes', rel='stylesheet')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
     script(src='/js/site.js?variable=yes') 
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js')
+
 
   body
     #dash.container-fluid
